# SudokuAR

./: .gitignore  CMakeLists.txt  README
algo/: Algorithm.cpp  Algorithm.h  AlgorithmSettings.cpp  AlgorithmSettings.h  CMakeLists.txt  Container.cpp  Container.h  LineAlgorithms.cpp  LineAlgorithms.h  OCR.cpp  OCR.h  util.cpp  util.h
algo/auxiliary/: Bilateral.cpp  Bilateral.h  Blur.cpp  Blur.h  Canny.cpp  Canny.h  Close.cpp  Close.h  GaussianBlur.cpp  GaussianBlur.h  Gray.cpp  Gray.h  Open.cpp  Open.h  ROI.cpp  ROI.h  Resize.cpp  Resize.h  Threshold.cpp  Threshold.h
algo/sudoku/: FindPerpLines.cpp  FindPerpLines.h  FitRegularPerpLines.cpp  FitRegularPerpLines.h  GridDetect.cpp  GridDetect.h  GridRefine.cpp  GridRefine.h  HoughTransform.cpp  HoughTransform.h  HoughTransformProb.cpp  HoughTransformProb.h  LineGrouping.cpp  LineGrouping.h  LineSegmenter.cpp  LineSegmenter.h  SolutionDisplay.cpp  SolutionDisplay.h  Sudoku.cl  Sudoku.cpp  Sudoku.h  TemplateMatch.cl  TemplateMatch.cpp  TemplateMatch.h  TemplateMatchCPU.cpp  TemplateMatchGPU.cpp  TemplateMatchGPUOther.cpp  TemplateMatchOCVGPU.cpp
common/: CLUtil.cpp  CLUtil.h  CMakeLists.txt  IComputeTask.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
eval/grid_detect/: 0.yml  1.yml  2.yml  3.yml  4.yml
eval/solver/: SudokuSolver_16.yml  SudokuSolver_4.yml  SudokuSolver_4_Result_CPU.yml  SudokuSolver_9.yml  SudokuSolver_9_1.yml  SudokuSolver_9_2.yml  SudokuSolver_9_Result_CPU.yml
param/: ocr.yml  ocr2.yml
reports/: ReductionTask_rx480.txt  integral_rtx2070s.txt  integral_rx480.txt
test/: CMakeLists.txt  Test.cpp  Test.h  TestGridDetect.cpp  TestGridDetect.h  TestTemplateMatch.cpp  TestTemplateMatch.h  main.cpp
tools/: CMakeLists.txt
tools/develgui/: AlgoFactory.cpp  AlgoFactory.h  CMakeLists.txt  ContainerDisplay.cpp  ContainerDisplay.h  ContainerList.cpp  ContainerList.h  DevelGUIWindow.cpp  DevelGUIWindow.h  DevelGUIWindow.ui  GUIAlgoElement.cpp  GUIAlgoElement.h  OpenDialog.cpp  OpenDialog.h  PylonDriver.cpp  PylonDriver.h  SequenceProvider.cpp  SequenceProvider.h  main.cpp  res.qrc
tools/develgui/gui-algo/: GridDetectDisplay.cpp  GridDetectDisplay.h  HoughLinesDisplay.cpp  HoughLinesDisplay.h  TemplateMatchedDisplay.cpp  TemplateMatchedDisplay.h
tools/guicommon/: CMakeLists.txt  imageview.cpp  imageview.h  qimage_util.cpp  qimage_util.h
tools/ocrsetup/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
